# arango-cpp

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml  arango_example.pro  arango_test.pro  azure-pipelines.yml  conda-install-dependencies.sh  environment.devenv.yml  install-dependencies.sh  jsonArango_example.pro  jsonArango_test.pro  main.cpp  velocypack.patch
.github/workflows/: ci-build.yml
Resources/: arangodb-config.json
Resources/docs/: ArangoDB.md  install_macos10.15.md  install_win10_64.md  source.md  time_test.ods
build-win/: Install-CMake.ps1  Install-win64-admin.ps1  Install-win64-mingw.ps1  Update-win64-mingw.ps1  WIN_INSTALL.md  install-dependencies-Win.sh
ci/appveyor/: build.bat  install-dependencies.bat  install.bat
ci/pipelines/: install.sh  installVS.bat
ci/pipelines/install/: install-osx.sh
ci/travis/: install.sh  test.sh
cmake/modules/: PatchFile.cmake  arango-cppConfig.cmake.in  arango-cppFindDeps.cmake  arango-cppInstallCMakeConfigFiles.cmake  jsonarangoConfig.cmake.in  jsonarangoFindDeps.cmake  jsonarangoInstallCMakeConfigFiles.cmake
examples/: CMakeLists.txt  exampleArangoCRUD.cpp  exampleCRUD.cpp  exampleCollections.cpp  exampleConfig.cpp  exampleGraphCRUD.cpp  exampleKeyTemplate.cpp  exampleLoadValues.cpp  exampleOptions.cpp  exampleQuery.cpp  exampleRoot.cpp  exampleSelection.cpp  examples-cfg.json  time_test.cpp
include/arango-cpp/: arangocollection.h  arangoconnect.h  arangodbusers.h  arangoexception.h  arangograph.h
include/jsonarango/: arangocollection.h  arangoconnect.h  arangocurl.h  arangodbusers.h  arangoexception.h  arangograph.h  arangoquery.h  arangorequests.h  connection_ data.h  connection_data.h  query.h
python/: README.md  proposal.md
python/py-server/: arango-server.json  arangodbhandler.py  arangodbserver.py
src/: CMakeLists.txt  arango-cpp.pri  arangocollection.cpp  arangoconnect.cpp  arangocurl.cpp  arangocurl.h  arangodbusers.cpp  arangodetail.h  arangograph.cpp  arangoquery.cpp  arangorequests.cpp  arangorequests.h  connection_data.cpp  curlobjects_pool.h  jsonarango.pri  query.cpp
tests/: CMakeLists.txt  init_tests.h  main.cpp  tst_arango.h  tst_collection_api.h  tst_crud.h  tst_graph_api.h  tst_query_api.h  tst_root_api.h
tests/googletest/: CMakeLists.txt
win-make/: WIN-README.md  install-dependencies-Win-msvc.bat
